使用element UI 来显示错误信息

--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
     "popper.js": "^1.12"
   },
   "dependencies": {
+    "element-ui": "^2.4.11",
     "font-awesome": "^4.7.0",
     "vue": "^2.5.17"
   }
